# claude-otel

./: BACKLOG.md  LICENSE  MIGRATION.md  PRD.md  README.md  pyproject.toml
.claude/: settings.json
docs/: MessageComplete-Investigation.md
examples/: README.md  basic_sdk.py  custom_metrics.py  interactive_repl.py  programmatic_sdk.py  token_tracking.py
hooks/: post_tool.py  pre_tool.py
src/claude_otel/: __init__.py  backends.py  cli.py  config.py  exporter.py  formatting.py  metrics.py  pii.py  sdk_hooks.py  sdk_runner.py  wrapper.py
src/claude_otel/hooks/: __init__.py  post_tool.py  pre_compact.py  pre_tool.py
tests/: __init__.py  smoke_test.py  test_backends.py  test_cli.py  test_config.py  test_hooks.py  test_integration.py  test_interactive.py  test_metrics.py  test_redaction.py  test_resilience.py  test_sdk_hooks.py  test_sdk_runner.py  test_stop_hook.py  test_turn_tracking.py  test_wrapper.py
