[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-otel"
version = "0.1.0"
description = "OTEL telemetry wrapper for Claude CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
claude-otel = "claude_otel.wrapper:main"
claude-otel-pre-tool = "claude_otel.hooks.pre_tool:main"
claude-otel-post-tool = "claude_otel.hooks.post_tool:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require collector connectivity)",
]
testpaths = ["tests"]
